--- a/app/javascript/mastodon/locales/ja.json
+++ b/app/javascript/mastodon/locales/ja.json
@@ -246,7 +246,7 @@
   "status.open": "詳細を表示",
   "status.pin": "プロフィールに固定表示",
   "status.pinned": "固定されたトゥート",
-  "status.quote": "引用ブースト",
+  "status.quote": "引用",
   "status.reblog": "ブースト",
   "status.reblogged_by": "{name}さんがブースト",
   "status.reply": "返信",
