--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -276,6 +276,9 @@ ja:
       hero:
         desc_html: フロントページに表示されます。サイズは600x100px以上推奨です。未設定の場合、インスタンスのサムネイルが使用されます
         title: ヒーローイメージ
+      invisible_ltl:
+        desc_html: 一般ユーザに対してローカルタイムラインを非表示にします
+        title: ローカルタイムライン非表示
       peers_api_enabled:
         desc_html: 連合内でこのインスタンスが遭遇したドメインの名前
         title: 接続しているインスタンスのリストを公開する
