--- a/app/javascript/mastodon/locales/defaultMessages.json
+++ b/app/javascript/mastodon/locales/defaultMessages.json
@@ -326,6 +326,10 @@
         "id": "status.quote"
       },
       {
+        "defaultMessage": "Unlisted quote",
+        "id": "status.unlisted_quote"
+      },
+      {
         "defaultMessage": "Favourite",
         "id": "status.favourite"
       },
