--- a/app/javascript/mastodon/locales/ja.json
+++ b/app/javascript/mastodon/locales/ja.json
@@ -299,6 +299,7 @@
   "status.pinned": "固定されたトゥート",
   "status.read_more": "もっと見る",
   "status.quote": "引用",
+  "status.unlisted_quote": "未収載の引用",
   "status.reblog": "ブースト",
   "status.reblog_private": "ブースト",
   "status.reblogged_by": "{name}さんがブースト",
